texts transition time

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 
-<body class="d-flex h-100 w-100 justify-content-center align-items-center">
+<body onload="" class="d-flex h-100 w-100 justify-content-center align-items-center">
 
     <div id="form_content" class="check">
 
@@ -23,15 +23,15 @@
             <div id="indicator_content" class="d-flex">
 
                 <div class="indicator"  data-indicator="1">
-                    <div class="bullet loading"></div>
+                    <div class="bullet"></div>
                 </div>
 
                 <div class="indicator"  data-indicator="2">
-                    <div class="bullet loading"></div>
+                    <div class="bullet"></div>
                 </div>
 
                 <div class="indicator"  data-indicator="3">
-                    <div class="bullet loading"></div>
+                    <div class="bullet"></div>
                 </div>
 
             </div>
